[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['demochain-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'demochain-runtime-wasm'
version = '1.0.0'
[dependencies.demochain-runtime]
default-features = false
path = '..'
